revises the navigation bar so overly long items get truncated correctly

--- a/frontend/ui/arboreal.styles/_arboreal.style.general.scss
+++ b/frontend/ui/arboreal.styles/_arboreal.style.general.scss
@@ -503,7 +503,10 @@
 					a {
 					
 						@include full;
+						padding: 0 $slice;
 						height: $arborealNavigationBarHeight;
+						
+						@include textDelimited;
 						
 						&[href*='information'] {
 					
